services/express-template-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-template-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 3000
      targetPort: 3000
