services/express-template-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-template-load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: api
