services/postgres-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
