services/reservation-frontend-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-frontend-load-balancer-service
spec:
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    component: web
